package com.sda.patterns.structural.adapter.ex2;

public interface SocketAdapter {

	Voltage get220Voltage();

	Voltage get110Volt();

}
